outputtelem/sandbox_runlog_20260226_084624.txt
  File "C:\Users\rick\projects\Atlas\tools\replay_scenario.py", line 294
    return p.returncode
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
